[gd_scene load_steps=47 format=2]

[ext_resource path="res://levels/backgrounds/arrivals.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/FightScene.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI_PlayerInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_05.jpg" type="Texture" id=5]
[ext_resource path="res://fonts/Hey August.otf" type="DynamicFontData" id=6]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_08.jpg" type="Texture" id=7]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_04.jpg" type="Texture" id=8]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_08.jpg" type="Texture" id=9]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_07.jpg" type="Texture" id=10]
[ext_resource path="res://levels/backgrounds/fun/Jungle_02.jpg" type="Texture" id=11]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_01.jpg" type="Texture" id=12]
[ext_resource path="res://levels/backgrounds/fun/Jungle_08.jpg" type="Texture" id=13]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_06.jpg" type="Texture" id=14]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_06.jpg" type="Texture" id=15]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_05.jpg" type="Texture" id=16]
[ext_resource path="res://levels/backgrounds/fun/Jungle_03.jpg" type="Texture" id=17]
[ext_resource path="res://levels/backgrounds/fun/Jungle_06.jpg" type="Texture" id=18]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_02.jpg" type="Texture" id=19]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_02.jpg" type="Texture" id=20]
[ext_resource path="res://levels/backgrounds/fun/Jungle_04.jpg" type="Texture" id=21]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_04.jpg" type="Texture" id=22]
[ext_resource path="res://levels/backgrounds/fun/Jungle_07.jpg" type="Texture" id=23]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_07.jpg" type="Texture" id=24]
[ext_resource path="res://levels/backgrounds/fun/Jungle_05.jpg" type="Texture" id=25]
[ext_resource path="res://levels/backgrounds/fun/Japan_Bridge_03.jpg" type="Texture" id=26]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_03.jpg" type="Texture" id=27]
[ext_resource path="res://levels/backgrounds/fun/JungleWater_01.jpg" type="Texture" id=28]
[ext_resource path="res://levels/backgrounds/fun/Jungle_01.jpg" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 7 ) ],
"loop": true,
"name": "Japan_Bridge",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 13 ) ],
"loop": true,
"name": "Jungle",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "JungleWater",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 120
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 120
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 660, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.3094, 370.085 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Words:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PressKeyToStart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PressKeyToStart:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "end match fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "end match fade delayed"
length = 2.0

[sub_resource type="Animation" id=7]
resource_name = "fade to round"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_scene"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "fatality modulate in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.7, 0.4, 0.4, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fatality modulate out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.7, 0.4, 0.4, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Words:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "round" ],
"method": "announcer_speak"
}, {
"args": [ "FIGHT!" ],
"method": "format_text_for_label"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "press key to start flash"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PressKeyToStart:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PressKeyToStart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.6, 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="FightScene" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedBackground" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
frames = SubResource( 16 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 140.0
margin_right = 1024.0
margin_bottom = 300.0
grow_horizontal = 2
alignment = 1

[node name="Words" type="RichTextLabel" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 312.0
margin_right = 712.0
margin_bottom = 160.0
rect_min_size = Vector2( 400, 0 )
rect_clip_content = false
theme = SubResource( 5 )
meta_underlined = false
text = "ROUND 1"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 400.0
grow_horizontal = 2
alignment = 1

[node name="Countdown" type="RichTextLabel" parent="HBoxContainer2"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 462.0
margin_right = 562.0
margin_bottom = 160.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = false
theme = SubResource( 15 )
meta_underlined = false
text = "10"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="CountdownTimer" type="Timer" parent="HBoxContainer2"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( -48, 576 )
collision_layer = 2147483648
collision_mask = 17
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 540, 7 )
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2( -8, 472 )
collision_layer = 2147483648
collision_mask = 17
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 9.30939, -178.085 )
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( 1016, 288 )
collision_layer = 2147483648
collision_mask = 17
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 9.30939, 8.23621 )
shape = SubResource( 2 )

[node name="Announcer" type="AudioStreamPlayer" parent="."]

[node name="UI" parent="." instance=ExtResource( 3 )]
margin_left = 19.0
margin_top = 11.0
margin_right = 1587.0
margin_bottom = 109.0
rect_scale = Vector2( 0.63, 0.63 )

[node name="FatalityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EndFightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
"anims/end match fade" = SubResource( 8 )
"anims/end match fade delayed" = SubResource( 17 )
"anims/fade to round" = SubResource( 7 )
"anims/fatality modulate in" = SubResource( 9 )
"anims/fatality modulate out" = SubResource( 10 )
anims/intro = SubResource( 3 )
"anims/press key to start flash" = SubResource( 13 )

[node name="PressKeyToStart" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 312.0
margin_top = 96.0
margin_right = 712.0
margin_bottom = 146.0
rect_clip_content = false
theme = SubResource( 12 )
text = "press any key to start"

[node name="PauseDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 421.0
margin_top = 240.0
margin_right = 605.0
margin_bottom = 312.0
window_title = "Game paused"

[connection signal="timeout" from="HBoxContainer2/CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="FatalityTimer" to="." method="_on_FatalityTimer_timeout"]
[connection signal="timeout" from="EndFightTimer" to="." method="_on_EndFightTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="confirmed" from="PauseDialog" to="." method="_on_PauseDialog_confirmed"]
